# surf-1

./: AUTHORS  Makefile  Makefile.am  Makefile.in  NEWS  README  acinclude.m4  aclocal.m4  autoclean.sh  autogen.sh  config.status  configure  configure.in  description-pak  surf.1  surf.xpm
curve/: Bezout.h  BigInteger.cc  BigInteger.h  Makefile  Makefile.am  Makefile.in  Matrix.h  Monom.h  RBTree.cc  RBTree.h  RootFinder2d.cc  RootFinder3d.cc  TreePolynom.h  mygmp.cc  mygmp.h  resultant.cc
debian/: changelog  copyright  rules
debug/: Makefile  Makefile.am  Makefile.in  Timer.h  debug.cc  debug.h
dither/: Makefile  Makefile.am  Makefile.in
doc-pak/: ChangeLog  INSTALL  NEWS  README  TODO
docs/: manual.sgml
draw/: Makefile  Makefile.am  Makefile.in  NewClip.cc  NewClipSphereCentral.cc  SurfaceCalc.cc
drawfunc/: Bezier.cc  Bezier.h  Clip.cc  DrawFunc.cc  DrawfuncData.cc  Makefile  Makefile.am  Makefile.in  Monomial.h  MultiVariatePolynom.cc  MultiVariatePolynom.h  Sturmchain.cc  UniVariatePolynom.cc
gtk2gui/: MainWindow.cc  MainWindow.h  Makefile.am  gtk2gui.xml  start.cc
gtkgui/: ClipWindow.cc  ColorSelectionButton.cc  ColorWindow.cc  ConfigurationWindow.cc  ConfigurationWindow.h  DisplayWindow.h  DitherWindow.cc  Document.cc  Document.h  DrawingArea.cc  DrawingArea.h  IlluminationWindow.cc  MainWindowController.cc  MainWindowController.h  Makefile  Makefile.am  Makefile.in  NumericWindow.h  PrintImageDialog.cc  PrintImageDialog.h  ProgressDialog.cc  ProgressDialog.h  Requester.cc  SaveImageDialog.cc  TableBuilder.h  TextWidget.cc  TextWidget.h  WidgetReadWriter.cc  mycolor.cc  mygtk.h  showAbout.cc  start.cc
image-formats/: Makefile  Makefile.am  Makefile.in  eps.cc  eps.h  jpeg.cc  jpeg.h  ps.cc  ps.h  tiffprint.cc  tiffprint.h  xbitmap.cc  xbitmap.h  xwd.cc
misc/: Document.cc  Document.h  Makefile  Makefile.am  Makefile.in  Misc.cc  Misc.h  welcomeMessage.cc
mt/: GuiThread.cc  Makefile  Makefile.am  Makefile.in  TSDrawingArea.cc  Thread.cc
src/: Makefile  Makefile.am  Makefile.in  Options.cc  RgbBuffer.cc  RgbBuffer.h  WindowGeometry.h  bit_buffer.cc  def.h  float_buffer.cc  gui_config.cc  gui_config.h  init_parser.cc  init_parser.h  main.cc  symtab.cc  symtab.h
yaccsrc/: Makefile  Makefile.am  Makefile.in  Script.cc  Script.h  SymbolTable.cc  SymbolTable.h  addDefaultSymbols.cc  lexfunc.cc  mymemory.cc  polylex.c  polylexyacc.h  polyroot.cc  polyx.cc  polyx.h  polyyacc.c  polyyacc.h  polyyacc.y
